zh-cn/15.4/admin/storage-guide.rst
========
存储
========

概述
====

存储页面可以管理 Amazon S3、Google Cloud Storage 或 S3 兼容存储（如 MinIO）上的文件。

管理方法
======

对象存储服务器配置
---------------------------

从[系统 > 常规]打开存储配置,根据存储类型设置以下项目。

通用设置
~~~~~~~~

- 类型: 存储类型（自动/S3/GCS）
- 存储桶: 要管理的存储桶名称

S3 设置
~~~~~~~

- 端点: S3 端点（为空时使用 AWS 默认值）
- 访问密钥: AWS 访问密钥
- 私密密钥: AWS 私密密钥
- 区域: AWS 区域

GCS 设置
~~~~~~~~

- 端点: GCS 端点（为空时使用 Google Cloud 默认值）
- 项目ID: Google Cloud 项目 ID
- 凭据路径: 服务账户凭据 JSON 文件路径

MinIO（S3 兼容）设置
~~~~~~~~~~~~~~~~~~~~

- 端点: MinIO 服务器的端点 URL
- 访问密钥: MinIO 访问密钥
- 私密密钥: MinIO 私密密钥


显示方法
------

要打开下图所示的对象列表页面,请单击左侧菜单中的[系统 > 存储]。

|image0|


名称
::::

对象的文件名


大小
:::::

对象的大小


最后更新时间
:::::::::

对象的最后更新时间

下载
---------

单击"下载"按钮,即可下载对象。


删除
----

单击"删除"按钮,即可删除对象。


上传
---------

单击右上角的"文件上传"按钮,即可打开文件上传窗口。


创建文件夹
------------

单击路径显示右侧的"创建文件夹"按钮,即可打开创建文件夹窗口。请注意,无法创建空文件夹。


.. |image0| image:: ../../../resources/images/en/15.4/admin/storage-1.png
